--- a/contact.html
+++ b/contact.html
@@ -1,155 +1,198 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Testimonials - Mantra EduCare School</title>
- <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-    }
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Contact Us - Mantra EduCare School</title>
+    <style>
+        body {
+            margin: 0;
+            font-family: Arial, sans-serif;
+        }
 
-    header {
-      background-color: #004080;
-      color: white;
-    }
+        header {
+            background-color: #004080;
+            color: white;
+        }
 
-    .header-container {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 10px 20px;
-      flex-wrap: wrap;
-    }
+        .header-container {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 10px 20px;
+            flex-wrap: wrap;
+        }
 
-    .logo img {
-      height: 50px;
-    }
+        .logo img {
+            height: 50px;
+        }
 
-    .nav-container {
-      display: flex;
-      align-items: center;
-    }
+        .nav-container {
+            display: flex;
+            align-items: center;
+        }
 
-    nav ul {
-      list-style: none;
-      margin: 0;
-      padding: 0;
-      display: flex;
-      gap: 20px;
-    }
+        nav ul {
+            list-style: none;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            gap: 20px;
+        }
 
-    nav ul li a {
-      color: white;
-      text-decoration: none;
-    }
+        nav ul li a {
+            color: white;
+            text-decoration: none;
+        }
 
-    nav ul li a.active {
-      font-weight: bold;
-      text-decoration: underline;
-    }
+        nav ul li a.active {
+            font-weight: bold;
+            text-decoration: underline;
+        }
 
-    .toggle-btn {
-      display: none;
-      font-size: 26px;
-      background: none;
-      border: none;
-      color: white;
-      cursor: pointer;
-    }
+        .toggle-btn {
+            display: none;
+            font-size: 26px;
+            background: none;
+            border: none;
+            color: white;
+            cursor: pointer;
+        }
 
-    @media (max-width: 768px) {
-      .toggle-btn {
-        display: block;
-        position: absolute;
-        right: 20px;
-        top: 15px;
-        z-index: 999;
-      }
+        @media (max-width: 768px) {
+            .toggle-btn {
+                display: block;
+                position: absolute;
+                right: 20px;
+                top: 15px;
+                z-index: 999;
+            }
 
-      .nav-container {
-        width: 100%;
-        flex-direction: column;
-        align-items: flex-start;
-      }
+            .nav-container {
+                width: 100%;
+                flex-direction: column;
+                align-items: flex-start;
+            }
 
-      nav ul {
-        flex-direction: column;
-        align-items: flex-start;
-        display: none;
-        background-color: #004080;
-        width: 100%;
-        padding: 10px 20px;
-      }
+            nav ul {
+                flex-direction: column;
+                align-items: flex-start;
+                display: none;
+                background-color: #004080;
+                width: 100%;
+                padding: 10px 20px;
+            }
 
-      nav ul.show {
-        display: flex;
-      }
+            nav ul.show {
+                display: flex;
+            }
 
-      nav ul li {
-        width: 100%;
-        padding: 8px 0;
-      }
-    }
+            nav ul li {
+                width: 100%;
+                padding: 8px 0;
+            }
+        }
 
-    section {
-      padding: 20px;
-    }
+        section {
+            padding: 20px;
+        }
 
-    footer {
-      background-color: #004080;
-      color: white;
-      text-align: center;
-      padding: 10px 0;
-    }
+        footer {
+            background-color: #004080;
+            color: white;
+            text-align: center;
+            padding: 10px 0;
+        }
 
-    footer a {
-      color: white;
-      margin: 0 5px;
-      text-decoration: underline;
-    }
-  </style>
-  <script>
-    function toggleMenu() {
-      document.getElementById("nav-list").classList.toggle("show");
-    }
-  </script>
+        footer a {
+            color: white;
+            margin: 0 5px;
+            text-decoration: underline;
+        }
+
+        section {
+            padding: 30px 20px;
+            background-color: #f4f8fc;
+            border-radius: 8px;
+            max-width: 800px;
+            margin: auto;
+            line-height: 1.8;
+        }
+
+        section h2 {
+            color: #004080;
+        }
+
+        footer {
+            background-color: #004080;
+            color: white;
+            text-align: center;
+            padding: 20px 10px;
+        }
+
+        footer p {
+            margin: 8px 0;
+            line-height: 1.5;
+        }
+    </style>
+    <script>
+        function toggleMenu() {
+            document.getElementById("nav-list").classList.toggle("show");
+        }
+    </script>
 </head>
+
 <body>
-  <header>
-    <div class="header-container">
-      <div class="logo">
-        <img src="images.png" alt="Mantra EduCare School Logo" />
-      </div>
-      <button class="toggle-btn" onclick="toggleMenu()">☰</button>
-      <div class="nav-container">
-        <nav>
-          <ul id="nav-list">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html" class="active">About Us</a></li>
-            <li><a href="courses.html">Courses</a></li>
-            <li><a href="testimonials.html">Testimonials</a></li>
-            <li><a href="contact.html">Contact</a></li>
-          </ul>
-        </nav>
-      </div>
-    </div>
-  </header>
+    <header>
+        <div class="header-container">
+            <div class="logo">
+                <img src="images.png" alt="Mantra EduCare School Logo" />
+            </div>
+            <button class="toggle-btn" onclick="toggleMenu()">☰</button>
+            <div class="nav-container">
+                <nav>
+                    <ul id="nav-list">
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="about.html">About Us</a></li>
+                        <li><a href="courses.html">Courses</a></li>
+                        <li><a href="testimonials.html">Testimonials</a></li>
+                        <li><a href="contact.html" class="active">Contact</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </header>
 
 
-  <section>
-    <h2>Testimonials</h2>
-    <p>"Amazing school with supportive teachers!" – Parent</p>
-    <p>"I love the activities and the learning environment!" – Student</p>
-  </section>
+    <main>
+        <section>
+            <h2>Contact Us</h2>
+            <p>We would love to hear from you! Feel free to reach out with any questions or to schedule a visit.</p>
 
-  <footer>
-    <p>&copy; 2025 Mantra EduCare School | Follow us on:
-      <a href="#">Facebook</a> |
-      <a href="#">Twitter</a> |
-      <a href="#">Instagram</a>
-    </p>
-  </footer>
+            <h3>📍 Address:</h3>
+            <p>Mantra EduCare School,<br>Near ABC Park, Greenfield Road,<br>Surat, Gujarat – 395007</p>
+
+            <h3>📞 Phone:</h3>
+            <p><a href="tel:+919999999999">+91 99999 99999</a></p>
+
+            <h3>✉️ Email:</h3>
+            <p><a href="mailto:info@mantraeducare.com">info@mantraeducare.com</a></p>
+
+
+            <h3>School Hours:</h3>
+            <p>Monday to Saturday – 9:00 AM to 12:30 PM</p>
+        </section>
+    </main>
+
+
+    <footer>
+        <p>&copy; 2025 Mantra EduCare School | Follow us on:
+            <a href="#">Facebook</a> |
+            <a href="#">Twitter</a> |
+            <a href="#">Instagram</a>
+        </p>
+    </footer>
 </body>
+
 </html>
